[gd_scene load_steps=2 format=3 uid="uid://brpvlxjsfq5vh"]

[ext_resource type="Script" path="res://Scripts/Multiplayer/MainMenu.gd" id="1_5pbp5"]

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_5pbp5")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 230
theme_override_constants/margin_right = 230

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label2" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "JUGAR"

[node name="Button" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Partida local"

[node name="HSeparator3" type="HSeparator" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "IP del servidor: "

[node name="ServerIp" type="TextEdit" parent="UI/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="JoinServer" type="Button" parent="UI/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 6
text = "Unirse a partida en l√≠nea"

[node name="HSeparator2" type="HSeparator" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer6" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 4
text = "Modo espectador:"

[node name="SpectatorToggle" type="CheckBox" parent="UI/MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 6

[node name="HostServer" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Hostear servidor"

[node name="HSeparator" type="HSeparator" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "OPCIONES"

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "General"

[node name="GeneralSlider" type="HSlider" parent="UI/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05

[node name="HBoxContainer4" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Musica"

[node name="GeneralSlider" type="HSlider" parent="UI/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05

[node name="HBoxContainer5" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Sonido"

[node name="GeneralSlider" type="HSlider" parent="UI/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05

[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/JoinServer" to="." method="_on_join_server_pressed"]
[connection signal="toggled" from="UI/MarginContainer/VBoxContainer/HBoxContainer6/SpectatorToggle" to="." method="_on_spectator_toggle_toggled"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/HostServer" to="." method="_on_host_server_pressed"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/HostServer" to="." method="_on_button_pressed"]
